# screen_brightness_control

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  docver_links_inline.html  docver_links_inline2.html  docver_links_redir.html  dropdowns.css  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  source.html  version_navigator.css  version_navigator.js  windows.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  tests.yaml
docs/: README.md  build_full_documentation.py  index.html  linux.html  make.py  requirements.txt  screen_brightness_control.html  search.json  windows.html
docs/0.10.0/: screen_brightness_control.html
docs/0.10.1/: index.html  screen_brightness_control.html  search.js  search.json
docs/0.11.0/: screen_brightness_control.html  search.json
docs/0.11.1/: screen_brightness_control.html  search.js
docs/0.11.2/: screen_brightness_control.html  search.js
docs/0.11.3/: index.html  screen_brightness_control.html  search.js  search.json
docs/0.11.4/: screen_brightness_control.html
docs/0.11.5/: screen_brightness_control.html  search.js
docs/0.12.0/: screen_brightness_control.html  search.js
docs/0.13.0/: screen_brightness_control.html  search.js
docs/0.13.1/: screen_brightness_control.html
docs/0.13.2/: screen_brightness_control.html  search.js
docs/0.14.0/: screen_brightness_control.html  search.js
docs/0.14.1/: screen_brightness_control.html  search.js
docs/0.14.2/: screen_brightness_control.html
docs/0.15.0/: screen_brightness_control.html  search.js
docs/0.15.1/: screen_brightness_control.html
docs/0.15.2/: screen_brightness_control.html
docs/0.15.3/: screen_brightness_control.html
docs/0.15.4/: screen_brightness_control.html
docs/0.15.5/: screen_brightness_control.html
docs/0.16.0/: screen_brightness_control.html  search.js
docs/0.16.1/: screen_brightness_control.html
docs/0.16.2/: screen_brightness_control.html
docs/0.17.0/: screen_brightness_control.html
docs/0.18.0/: screen_brightness_control.html  search.js
docs/0.19.0/: screen_brightness_control.html  search.js
docs/0.20.0/: screen_brightness_control.html  search.js
docs/0.21.0/: screen_brightness_control.html  search.js
docs/0.22.0/: screen_brightness_control.html  search.js
docs/0.22.1/: screen_brightness_control.html  (+1 more)
extras/: Examples.html  FAQ.html  Installing On Linux.html  Quick Start Guide.html
pytests/: conftest.py  helpers.py  test_init.py  test_linux.py
screen_brightness_control/: __init__.py  __main__.py  _debug.py  _version.py  config.py  exceptions.py  helpers.py  linux.py  types.py  windows.py
tests/: README.md  conftest.py  helpers.py  test_config.py  test_helpers.py  test_init.py  test_linux.py  test_windows.py  testall.py
tools/: gh-pages.py  make_docs.py
(+336 files in other folders)
